--- a/blogpost.html
+++ b/blogpost.html
@@ -13,8 +13,8 @@
             <div id="post">
                 <h1>Este es el titulo interesante del post</h1>
                 <p>
-                    Y este es el parrafo de inicio donde vamos a
-                    explicar las cosas increibles que se pueden 
+                    Y este es el párrafo de inicio donde vamos a
+                    explicar las cosas increíbles que se pueden 
                     hacer con ramas
                 </p>
                 <p>Los blogs son la mejor forma de compartir informacion
